<resources>
	<!-- Non Fragment Navigation Drawer Information -->
	<string name="app_name" translatable="false">FU Mail App</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">Example User</string>
	<string name="nav_header_subtitle">examplU19@zedat.fu-berlin.de</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="action_settings">Settings</string>
	<string name="settings_icon_desc">A small Gear</string>

	<!-- Fragment Drawer Items-->
	<string name="menu_unread">Unread</string>
	<string name="menu_inbox">Inbox</string>
	<string name="menu_spam" translatable="false">Spam</string>
	<string name="menu_trash">Trash</string>
	<string name="menu_sent">Sent</string>
	<string name="menu_drafts">Drafts</string>


	<!-- Login Dialog Information-->
	<string name="login">Login</string>
	<string name="please_login">Please Login</string>

	<!-- Hints -->
	<string name="email_hint">johD15@zedat.fu-berlin.de</string>
	<string name="password_hint">Password</string>
	<string name="name_hint">John Doe</string>

	<!-- Labels -->
	<string name="email_label">Your ZeDat E-Mail:</string>
	<string name="password_label">Your ZeDat Password:</string>
	<string name="name_label">Your preferred Name:</string>

	<!-- Dialog Buttons -->
	<string name="signin">Sign-In</string>
	<string name="cancel">Cancel</string>
	<string name="confirm">Confirm</string>

	<!-- Login Dialog Options -->
	<string name="invalid_email">Your E-Mail needs to contain @zedat.fu-berlin.de</string>
	<string name="login_needed">You need to be logged in to use this App</string>
	<string name="login_checkbox">Keep me logged in</string>

	<!-- Settings -->
	<string name="general">General</string>
	<string name="loggedInSummary">Save your Login Data for later</string>
	<string name="loggedIn">Stay logged in</string>
	<string name="logout">Logout</string>
	<string name="logout_summary">Log yourself out</string>
	<string name="signature">Signature</string>
	<string name="default_signature"><![CDATA[——— <br> This message was sent by the <a href="https://github.com/drblaui/Fu-Mail-App">FU-Mail-App E-Mail Client</a>]]></string>

	<!-- Credits -->
	<string name="credits" translatable="false">Credits</string>
	<string name="fu_logo" translatable="false">FU Logo</string>
	<string name="url_fu_logo" translatable="false">https://upload.wikimedia.org/wikipedia/en/thumb/6/62/Seal_of_Free_University_of_Berlin.svg/1200px-Seal_of_Free_University_of_Berlin.svg.png</string>
	<string name="javamail" translatable="false">JavaMail</string>
	<string name="url_javamail" translatable="false">https://javaee.github.io/javamail/</string>
	<string name="encryptor">En- and Decryptor</string>
	<string name="url_en_decryptor" translatable="false">https://gist.github.com/JosiasSena/3bf4ca59777f7dedcaf41a495d96d984</string>
	<string name="tap_to_view">Tap to view</string>
	<string name="url_icons" translatable="false">https://material.io/resources/icons/</string>
	<string name="icons" translatable="false">Icons</string>
	<string name="special_thanks">Special Thanks</string>
	<string name="fu_planner">Sebastian Seedorf and Joshua for letting me use some of their code snippets from the FU Planner</string>
	<string name="url_fuplanner" translatable="false">https://git.imp.fu-berlin.de/seedorf96/fuplanner</string>

	<!-- Write Mail -->
	<string name="placeholder_receiver">Receiver(s)</string>
	<string name="placeholder_subject">Subject</string>
	<string name="placeholder_mail">E-Mail Content</string>
	<string name="button_send">Send</string>
	<string name="button_attachments">Attachments</string>
	<string name="mail_header">Write a new E-Mail</string>
	<string name="mail_send_success">E-Mail send successfully</string>
	<string name="mail_send_failed">E-Mail could not be send. Please try again.</string>
	<string name="mail_invalid">E-Mail is invalid!</string>
	<string name="change_mail">Change E-Mail</string>
	<string name="change_filename">Change Filename</string>
	<string name="error_receiver">Receiver(s) can\'t be empty</string>
	<string name="error_subject">Subject can\'t be empty</string>
	<string name="error_body">E-Mail Content can\'t be empty without attachment</string>
	<string name="invalid_file">Invalid file. Try selecting it through \"SDCARD\" or your Internal Storage </string>

	<!-- Fragments -->
	<string name="inbox_fragment">Inbox is empty</string>
	<string name="sent_fragment">No sent emails</string>
	<string name="trash_fragment">Trash is Empty</string>
	<string name="drafts_fragment">No drafts</string>
	<string name="spam_fragment">Spam is empty</string>
	<string name="unread_fragment">No unread mails</string>

	<!-- Notifications -->
	<string name="markRead">Mark as Read</string>

	<!-- Mail Content -->
	<string name="from"><b>From: </b>%s</string>
	<string name="to"><b>To: </b>%s</string>
	<string name="subject"><b>Subject: </b>%s</string>
	<string name="date"><b>Date: </b>%s</string>

</resources>
