<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:showIn="navigation_view">

	<group android:checkableBehavior="single"
		android:id="@+id/sidebar">
		<item
			android:id="@+id/nav_unread"
			android:icon="@drawable/ic_unread"
			android:title="@string/menu_unread"/>
		<item
			android:id="@+id/nav_inbox"
			android:icon="@drawable/ic_inbox"
			android:title="@string/menu_inbox" />
		<item
			android:id="@+id/nav_spam"
			android:icon="@drawable/ic_spam"
			android:title="@string/menu_spam" />
		<item
			android:id="@+id/nav_trash"
			android:icon="@drawable/ic_trash"
			android:title="@string/menu_trash" />
		<item
			android:id="@+id/nav_sent"
			android:icon="@drawable/ic_sent"
			android:title="@string/menu_sent" />

		<item
			android:id="@+id/nav_drafts"
			android:icon="@drawable/ic_drafts"
			android:title="@string/menu_drafts" />
	</group>
	
</menu>
